# Rust

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  start.ps1  start.sh
assets/: app.js  components-inline.js  generate-icons.html  index.html  manifest.json  styles.css  sw.js
src/: auth.rs  cluster.rs  db.rs  domain.rs  error.rs  files.rs  main.rs  repository.rs  service.rs  state.rs  web.rs
